<resources>
    <string name="app_name">PaymentApp2020</string>
    <string name="Search_title">Search</string>
    <string name="setting">Setting</string>
    <string name="privacy">Privacy</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="category">Category</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="logout">Logout</string>
    <string name="navigation_open">Open Navigation</string>
    <string name="navigation_close">Close Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_message">Message</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome To Shop Now</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Signup</string>

</resources>