<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/bottom_bar"
        android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"/>
        <item android:id="@+id/category"
            android:title="@string/category"
            android:icon="@drawable/ic_baseline_category_24"/>

        <item android:id="@+id/notification"
            android:title="@string/notification"
            android:icon="@drawable/ic_baseline_notifications_24"/>
        <item android:id="@+id/message"
            android:title="@string/message"
            android:icon="@drawable/icons8_message_exchange_24px_1"/>

    </group>

</menu>